# veyon

cmake/modules/: BuildPlugin.cmake
plugins/ldap/: CMakeLists.txt
plugins/platform/: CMakeLists.txt
plugins/platform/osx/: CMakeLists.txt  OsXCoreFunctions.cpp  OsXCoreFunctions.h  OsXDesktopIntegration.h  OsXFilesystemFunctions.cpp  OsXFilesystemFunctions.h  OsXInputDeviceFunctions.cpp  OsXInputDeviceFunctions.h  OsXKeyboardShortcutTrapper.h  OsXNetworkFunctions.cpp  OsXNetworkFunctions.h  OsXPlatformPlugin.cpp  OsXPlatformPlugin.h  OsXServiceCore.cpp  OsXServiceCore.h  OsXServiceFunctions.cpp  OsXServiceFunctions.h  OsXUserFunctions.cpp  OsXUserFunctions.h
